--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "vue": "^2.2.2",
+    "vue-material": "^0.7.4",
     "vue-router": "^2.2.0"
   },
   "devDependencies": {
